// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentAccess for authenticated agent renders correctly 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-nameAndAvatarContainer"
  >
    <div
      class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
    >
      <span
        class="PodBrowser-icon-user-lock"
        style="font-size: 0.875rem; display: flex; width: 1.875rem; height: 1.875rem; align-items: center; justify-content: center; color: rgb(76, 175, 80); background-color: rgb(237, 247, 237); border-radius: 50%;"
      />
    </div>
    <p
      class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
      data-testid="agent-web-id"
    />
    <button
      class="PodBrowser-button"
      data-testid="menu-button"
      type="button"
    >
      <i
        class="PodBrowser-icon-more"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess for public agent renders correctly 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-nameAndAvatarContainer"
  >
    <div
      class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
    >
      <span
        class="PodBrowser-icon-globe"
        style="font-size: 0.875rem; display: flex; width: 1.875rem; height: 1.875rem; align-items: center; justify-content: center; color: rgb(33, 150, 243); background-color: rgb(232, 244, 253); border-radius: 50%;"
      />
    </div>
    <p
      class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
      data-testid="agent-web-id"
    />
    <button
      class="PodBrowser-button"
      data-testid="menu-button"
      type="button"
    >
      <i
        class="PodBrowser-icon-more"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess with profile renders 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loadingStateContainer"
  >
    <span
      class="PodBrowser-root PodBrowser-circle PodBrowser-pulse"
      style="width: 40px; height: 40px;"
    />
    <div>
      <span
        class="PodBrowser-root PodBrowser-text PodBrowser-pulse"
        style="width: 100px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess without profile renders an error message with a 'try again' button if it's unable to load profile 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loadingStateContainer"
  >
    <span
      class="PodBrowser-root PodBrowser-circle PodBrowser-pulse"
      style="width: 40px; height: 40px;"
    />
    <div>
      <span
        class="PodBrowser-root PodBrowser-text PodBrowser-pulse"
        style="width: 100px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess without profile renders skeleton placeholders when profile is not available 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loadingStateContainer"
  >
    <span
      class="PodBrowser-root PodBrowser-circle PodBrowser-pulse"
      style="width: 40px; height: 40px;"
    />
    <div>
      <span
        class="PodBrowser-root PodBrowser-text PodBrowser-pulse"
        style="width: 100px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccess without profile returns null when no access 1`] = `<DocumentFragment />`;
